<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray_200"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/textView"
                style="@style/titulo_texto"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="@string/app_name"
                tools:ignore="MissingConstraints" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button5"
                    style="@style/btnDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:onClick="openForm"
                    android:text="@string/btnForm"
                    tools:ignore="UsingOnClickInXml" />


                <Button
                    android:id="@+id/button4"
                    style="@style/btnLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="openVehiculos"
                    android:text="@string/btnVehiculos"
                    tools:ignore="UsingOnClickInXml" />

                <Button
                    android:id="@+id/btnMain"
                    style="@style/btnDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                   android:onClick="openVillanos"
                    android:text="@string/btnVillanos"
                    tools:ignore="UsingOnClickInXml" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="175dp"
                        android:layout_height="262dp"
                        android:layout_marginTop="24dp"
                        android:contentDescription="@string/Name_super1"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:srcCompat="@drawable/ironman"
                        tools:layout_editor_absoluteX="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/subtitulo_texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="16dp"

                        android:text="@string/Name_super1"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        tools:layout_editor_absoluteX="291dp" />

                    <TextView
                        style="@style/descripcion_texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Descripcion1"
                        app:layout_constraintBottom_toTopOf="@+id/textView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:justificationMode="inter_word"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        app:layout_constraintVertical_bias="1.0"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"

                        android:text="@string/habilidad2"
                        style="@style/texto_references"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        tools:layout_editor_absoluteX="293dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/habilidad1"
                        style="@style/texto_references"
                        tools:layout_editor_absoluteX="293dp"
                        tools:layout_editor_absoluteY="283dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/subtitulo_texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="16dp"

                        android:text="@string/Name_Super2"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        tools:layout_editor_absoluteX="291dp" />

                    <TextView
                        style="@style/descripcion_texto"
                        android:layout_width="217dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Descripcion2"
                        app:layout_constraintBottom_toTopOf="@+id/textView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        android:justificationMode="inter_word"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        app:layout_constraintVertical_bias="1.0"
                        tools:targetApi="o" />

                    <TextView
                        style="@style/texto_references"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="8dp"
                        android:text="@string/habilidad3"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        tools:layout_editor_absoluteX="293dp" />

                    <TextView
                        style="@style/texto_references"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/habilidad1"
                        tools:layout_editor_absoluteX="293dp"
                        tools:layout_editor_absoluteY="283dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="190dp"
                        android:layout_height="262dp"
                        android:layout_marginTop="24dp"
                        android:background="#252533"
                        android:contentDescription="@string/Name_Super2"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:srcCompat="@drawable/captainamerica"
                        tools:layout_editor_absoluteX="16dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="190dp"
                        android:layout_height="262dp"
                        android:layout_marginTop="24dp"
                        android:contentDescription="@string/Name_Super3"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:srcCompat="@drawable/flash"
                        tools:layout_editor_absoluteX="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/subtitulo_texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/Name_Super3"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        tools:layout_editor_absoluteX="291dp" />

                    <TextView
                        style="@style/descripcion_texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Descripcion3"
                        app:layout_constraintBottom_toTopOf="@+id/textView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        android:justificationMode="inter_word"
                        app:layout_constraintVertical_bias="1.0"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/habilidad2"
                        style="@style/texto_references"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        tools:layout_editor_absoluteX="293dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/habilidad3"
                        style="@style/texto_references"
                        tools:layout_editor_absoluteX="293dp"
                        tools:layout_editor_absoluteY="283dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/subtitulo_texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="16dp"
                        android:text="@string/Name_Super4"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        tools:layout_editor_absoluteX="291dp" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/descripcion_texto"
                        android:layout_width="217dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Descripcion4"
                        app:layout_constraintBottom_toTopOf="@+id/textView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        android:justificationMode="inter_word"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        app:layout_constraintVertical_bias="1.0"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/habilidad4"
                        style="@style/texto_references"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        tools:layout_editor_absoluteX="293dp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/texto_references"
                        android:text="@string/habilidad1"
                        tools:layout_editor_absoluteX="293dp"
                        tools:layout_editor_absoluteY="283dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="190dp"
                        android:layout_height="262dp"
                        android:layout_marginTop="24dp"
                        android:contentDescription="@string/Name_Super4"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:srcCompat="@drawable/superman"
                        tools:layout_editor_absoluteX="16dp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>